# flatmap-maker

./: .gitignore  .readthedocs.yml  DEPLOY.rst  M1MAC.rst  Pipfile  README.rst  RELEASE.rst  WINDOWS.rst  annotator.py  mapmaker.py  pyproject.toml  release.sh  requirements.txt  run_test.sh  run_tests.sh  runmaker.py  setup.py
.github/workflows/: mapmaker.yaml
conda/: M1Mac.yaml
conf/: details-test.conf  details-test0.conf  details-test0.json  rat-test.conf
docs/: Annotation.rst  Datasets.rst  DrawingML.rst  Makefile  Manifest.rst  OVERVIEW.rst  Reference.rst  Running.rst  Shapes.rst  Sources.rst  WINDOWS.md  WINDOWS.rst  conf.py  index.rst
docs/_static/css/: custom.css
envs/: mapmaker.yaml
map_sources/naz/: rat_flatmap_merged.txt
map_sources/rat/: rat_flatmap_properties.json
map_sources/tests/: rat_spine_bit.pptx
mapmaker/: __init__.py  __main__.py  __version__.py  cleaner.py  constants.py  exceptions.py  flatmap.py  labels.py  maker.py  mbf2map.py  mbtiles.py  parser.py  pathways.py  properties.py  rdf.py  settings.py  styling.py  tilejson.py  tilemaker.py
mapmaker/annotation/: __init__.py  json_annotations.py  json_annotator.py  xlsx_annotator.py  xlsx_annotator_v2.py
mapmaker/drawml/: __init__.py  arc_to_bezier.py  clean.py  extractor.py  geojson.py  geojson_extractor.py  mapmaker.py  svg_extractor.py  writer.py
mapmaker/flatmap/: __init__.py  feature.py  layers.py  manifest.py
mapmaker/geometry/: __init__.py  arc_to_bezier.py  beziers.py  cuff_circle.py  feature_search.py  proxy_dot.py  shapes.py
mapmaker/knowledgebase/: __init__.py  annotator.py  apinatomy.py  celldl.py  connectivity.py  labels.py  pubmed.py  rdf.py  scicrunch.py  sckan.py  terms.py
mapmaker/mbfbioscience/: __init__.py  mbflayer.py
mapmaker/output/: __init__.py  data_mapping.json  geojson.py  mbtiles.py  path_colours.py  sparc_dataset.py  styling.py  tilemaker.py
mapmaker/output/bondgraph/: __init__.py  namespaces.py
mapmaker/pathrouter/: __init__.py  autoroute.py
mapmaker/properties/: __init__.py  anatomicalmap.py  markup.py  pathways.py
mapmaker/rdf/: __init__.py  namespace.py  rdfgraph.py
mapmaker/routing/: __init__.py  layout.py  manager.py  network.py  neurons.py  options.py  order.py  region.py  routedpath.py  routes.py  scaffold_1d.py  scaffold_2d.py  tangles.py
mapmaker/routing/utils/: interpolation.py  maths.py  pair_iteration.py
mapmaker/routing/wip/: layout.py  order.py
mapmaker/shapes/: __init__.py  classify.py  colours.py  constants.py  line_finder.py  shapefilter.py  text_finder.py  types.py
mapmaker/sources/: __init__.py  markup.py  pmr.py  shape.py  shapefilter.py
mapmaker/sources/apinatomy/: __init__.py
mapmaker/sources/celldl/: __init__.py  definitions.py  exporter.py  powerpoint.py
mapmaker/sources/fc_powerpoint/: __init__.py  annotation.py  colours.py  components.py  connections.py  features.py  json_annotator.py  sckan.py  xlsx_annotator.py
mapmaker/sources/mbfbioscience/: __init__.py  mbflayer.py
mapmaker/sources/powerpoint/: __init__.py  colour.py  formula.py  geojson.py  geometry.py  mapmaker.py  omml2latex.py  parser.py  powerpoint.py  pptx2svg.py  presetShapeDefinitions.xml  presets.py  slide.py  svgutils.py  transform.py  utils.py
mapmaker/sources/svg/: __init__.py  cleaner.py  definitions.py  metadata.py  rasteriser.py  styling.py  transform.py  utils.py
mapmaker/tools/: annotator.py  cleaner.py
mapmaker/utils/: __init__.py  graph.py  image.py  logging.py  property_mixin.py  svg.py  treelist.py
resources/xsl/: mathml2latex.xsl
scripts/adobe/: SaveFlatmap.jsx
src/: knowledgebase.py  labels.py  mbtiles.py  namespaces.py  parser.py  pptx2geo.py  rdf.py  styling.py  tilemaker.py
src/drawml/: __init__.py  arc_to_bezier.py  extractor.py  formula.py  geojson_extractor.py  presets.py  svg_extractor.py
tests/keast/: anatomical_map.xlsx  bladder-manifest.json  keast_bladder_with_centrelines.json  keast_bladder_with_centrelines_test.json  rat_flatmap_properties.json
tests/path-test/: bolser.json  manifest.json  properties.json
tests/sources/: Rat_heart_annotated.pptx  details_test.pptx  details_test0.json  details_test0.pptx  details_test0_cleaned.pptx  details_test0_manifest.json  rat-test_cleaned.pptx  rat-test_manifest.json  rat_flatmap_spinal_cord_closed.pptx  rat_intestine.pptx  rat_spine_end1.pptx
tests/sources/issue-194/: manifest.json
tests/sources/issue-195/: manifest.json
tests/svg-details/: manifest.json
tests/svg-raster/: test.py
tests/vagus/: flatmap_annotation.xlsx  manifest.json  rat_flatmap_properties.json  sub-10_sam-1_P10-1MergeMask.xml  sub-10sam-1P10-1Slide2p3MT10x.jp2
tests/vagus-base/: manifest.json
tools/: anatomical_names.py  cleaner.py  connectivity_terms.py  convert_annotation.py  convert_latest_to_uuids.py  declassify.py  degroup.py  fc2celldl.py  flatmap_diagnostic.py  id_to_title.py  mbf2map.py  new_publications.py  no_style.py  npo_alias.py  npo_align.py  npo_check.py  pptx2geo.py  pptx2svg.py  publications.py  qtedit.py  svg_ids.py
