[project]
name = "mapmaker"
version = "1.22.0"
description = "Generate MapLibre compatible tilesets for flatmaps."
authors = [
    { name = "David Brooks", email = "d.brooks@auckland.ac.nz"}
]
readme = "README.rst"
requires-python = ">=3.12,<3.13"
dependencies = [
    "python-pptx>=0.6.21",
    "numpy>=1.24,<2.0",
    "beziers>=0.5.0",
    "requests>=2.32.0",
    "pyparsing>=3.0.9",
    "pyyaml>=6.0",
    "rdflib>=7.1.3",
    "shapely>=2.0.0",
    "pyproj>=3.4.0,<3.7.2",
    "mercantile>=1.2.1",
    "mbutil>=0.3.0",
    "networkx>=3.4.0",
    "openpyxl>=3.1.0",
    "tqdm>=4.64.0",
    "lxml>=5.2.2",
    "opencv-python-headless>=4.10.0",
    "svglib>=1.3.0",
    "skia-python>=136.0b13 ; platform_release != '5.4.0-1103-aws'",
    "skia-python==124.0b7 ; platform_release == '5.4.0-1103-aws'",
    "transforms3d>=0.4.1",
    "tinycss2>=1.1.1",
    "cssselect2>=0.6.0",
    "webcolors>=1.12",
    "xmltodict>=0.12.0",
    "flatmapknowledge @ https://github.com/AnatomicMaps/flatmap-knowledge/releases/download/v2.6.0/flatmapknowledge-2.6.0-py3-none-any.whl",
    "mapknowledge @ https://github.com/AnatomicMaps/map-knowledge/releases/download/v1.4.0/mapknowledge-1.4.0-py3-none-any.whl",
    "Pyomo>=6.8",
    "svgwrite>=1.4.3",
    "XlsxWriter>=3.0.3",
    "multiprocess>=0.70.13",
    "gitpython>=3.1.41",
    "giturlparse>=0.12.0",
    "types-requests>=2.28.11.2",
    "colormath>=3.0.0",
    "svgelements>=1.9.1",
    "saxonche>=12.5.0",
    "structlog>=24.4.0",
    "rich>=13.9.4",
    "tippecanoe>=2.72.0",
    "lark>=1.2.2",
]

[dependency-groups]
dev = [
    "attribution<=1.7.1",
    "sphinx<=8.1",
    "sphinx-rtd-theme<=3.0.1",
    "sphinx-argparse<=0.5.2",
    "pyright>=1.1.403",
]

[tool.poetry.group.alignments]
optional = true

[tool.poetry.group.alignments.dependencies]
pandas = "^2.2.2"
sentence-transformers = "^2.2.2"
torch = "^2.1.1"

[tool.poetry.group.tools]
optional = true

[tool.poetry.group.tools.dependencies]
pandas = "^2.2.2"

[tool.attribution]
name = "mapmaker"
package = "mapmaker"
version_file = true

[project.scripts]
mapmaker = 'mapmaker.__main__:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
include = ['mapmaker']
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
